--- a/index.html
+++ b/index.html
@@ -10,53 +10,50 @@
   <body>
     <section class="container">
       <nav>
-        <div class="title">
-          <h1>BusyBus</h1>
-            <div class="arrow">
-              <i class="fa fa-chevron-left fa-inverse fa-2x" aria-hidden="true"></i>
-            </div>
-          </div>
+        <div class="arrow">
+          <i class="fa fa-chevron-left fa-inverse fa-2x" aria-hidden="true"></i>
+        </div>
+        <h1>Washington & State</h1>
       </nav>
-      <section class="info">
-        <div class="direction">
-          <h2>Eastbound</h2>
-            <div class="content">
-              <h3>Line Direction Frequency</h3>
-              <h4>60 Randolph/Harbor Dr Every 20 minutes
-              <br>124 Navy Pier Every 10 minutes</h4>
-          </div>
-        </div>
-      <div class="direction">
-          <h2>Northbound</h2>
-          <div class="content">
-            <h3>Line Direction Frequency</h3>
-            <h4>151 Devon/Clark Every 16 minutes</h4>
-          </div>
-        </div>
-      <div class="direction">
-          <h2>Southbound</h2>
-          <div class="content">
-            <h3>Line Direction Frequency</h3>
-            <h4>J14 103rd/Stony Island Every 15 minutes
-            <br>124 Navy Pier Every 10 minutes</h4>
-          </div>
-        </div>
-      <div class="direction">
-          <h2>Reroute</h2>
-          <div class="content">
-            <h3>Line Direction Frequency</h3>
-            <h4>6x Jackson Park Express N/A</h4>
-          </div>
-        </div>
-      <div class="direction">
-          <h2>Out of Service</h2>
-          <div class="content">
-            <h3>Line Direction Frequency</h3>
-            <h4>4 Cottage Grove Resumes 12:10am
-            <br>20 Madison Resumes 12:10am
-            <br>157 Streeterville/Taylor Resumes 6:00am</h4>
-          </div>
-      </div>
+        <section class="info">
+          <section class="line">
+            <h2>Eastbound</h2>
+              <h3>60
+              <br>124</h3>
+            <h2>Northbound</h2>
+              <h3>151</h3>
+            <h2>Southbound</h2>
+              <h3>J14
+              <br>124</h3>
+            <h2>Reroute</h2>
+              <h3>6X</h3>
+            <h2>Out of service</h2>
+              <h3>4
+              <br>20
+              <br>157</h3>
+          </section>
+          <section class="direction">
+              <h3>Randolph/Harbor Dr
+              <br>Navy Pier
+              <br>Devon/Clark
+              <br>103rd/Stony Island
+              <br>Navy Pier
+              <br>Jackson Park Express
+              <br>Cottage Grove
+              <br>Madison
+              <br>Streeterville/Taylor</h3>
+          </section>
+          <section class="frequency">
+              <h3>Every 20 minutes
+              <br>Every 10 minutes
+              <br>Every 16 minutes
+              <br>Every 15 minutes
+              <br>Every 10 minutes
+              <br>N/A
+              <br>Resumes 12:10 a.m.
+              <br>Resumes 12:10 a.m.
+              <br>Resumes 6:00 a.m.</h3>
+          </section>
       </section>
     </section>
   </body>
