--- a/index.html
+++ b/index.html
@@ -8,51 +8,52 @@
     <script src="https://use.fontawesome.com/37471687aa.js"></script>
   </head>
   <body>
-    <section class="container">
+    <section>
       <nav>
-        <div class="arrow">
-          <i class="fa fa-chevron-left fa-inverse fa-2x" aria-hidden="true"></i>
-        </div>
         <h1>Washington & State</h1>
       </nav>
-        <section class="info">
-          <section class="line">
+        <section>
+          <section>
             <h2>Eastbound</h2>
               <h3>60
               <br>124</h3>
-            <h2>Northbound</h2>
-              <h3>151</h3>
-            <h2>Southbound</h2>
-              <h3>J14
-              <br>124</h3>
-            <h2>Reroute</h2>
-              <h3>6X</h3>
-            <h2>Out of service</h2>
-              <h3>4
-              <br>20
-              <br>157</h3>
+              <h4>Randolph/Harbor Dr
+              <br>Navy Pier</h4>
+              <h5>20 minutes
+              <br>10 minutes</h5>
           </section>
-          <section class="direction">
-              <h3>Randolph/Harbor Dr
-              <br>Navy Pier
-              <br>Devon/Clark
-              <br>103rd/Stony Island
-              <br>Navy Pier
-              <br>Jackson Park Express
-              <br>Cottage Grove
-              <br>Madison
-              <br>Streeterville/Taylor</h3>
+          <section>
+              <h2>Northbound</h2>
+                <h3>151</h3>
+                <h4>Devon/Clark</h4>
+                <h5>16 minutes</h5>
           </section>
-          <section class="frequency">
-              <h3>Every 20 minutes
-              <br>Every 10 minutes
-              <br>Every 16 minutes
-              <br>Every 15 minutes
-              <br>Every 10 minutes
-              <br>N/A
-              <br>Resumes 12:10 a.m.
-              <br>Resumes 12:10 a.m.
-              <br>Resumes 6:00 a.m.</h3>
+          <section>
+              <h2>Southbound</h2>
+                <h3>J14
+                <br>124</h3>
+                <h4>103rd/Stony Island
+                <br>Navy Pier</h4>
+                <h5>15 minutes
+                <br>10 minutes</h5>
+          </section>
+          <section>
+              <h2>Reroute</h2>
+                <h3>6X</h3>
+                <h4>Jackson Park Express</h4>
+                <h5>N/A</h5>
+          </section>
+          <section>
+              <h2>Out of service</h2>
+                <h3>4
+                <br>20
+                <br>157</h3>
+                <h4>Cottage Grove
+                <br>Madison
+                <br>Streeterville/Taylor</h4>
+                <h5>Resumes 12:10 a.m.
+                <br>Resumes 12:10 a.m.
+                <br>Resumes  6:00 a.m.</h5>
           </section>
       </section>
     </section>
