--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <title></title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://use.fontawesome.com/37471687aa.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </head>
   <body>
     <header>
       <nav>
+        <i class="fas fa-angle-left"></i>
         <h1>Washington & State</h1>
       </nav>
     </header>
