--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title></title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <script src="https://use.fontawesome.com/c958d2de80.js"></script>
   </head>
   <body>
     <header>
       <nav>
-        <i class="fas fa-angle-left"></i>
+        <i class="fa fa-angle-left fa-2x" aria-hidden="true"></i>
         <h1>Washington & State</h1>
       </nav>
     </header>
